# ukui-screensaver

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  GTKEmbed.pro  Makefile  NEWS  README  assets.qrc  autogen.sh  auxiliary.cpp  auxiliary.h  config.h.in  configuration.cpp  configuration.h  configure.ac  gsettings.cpp  gsettings.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  org.ukui.screensaver.gschema.xml  pam.cpp  pam.h  ukui-screensaver-command  ukui-screensaver-command.c  ukui-screensaver.pro  unixsignallistener.cpp  unixsignallistener.h
.tx/: config
BioAuth/: CMakeLists.txt  bioauth.pro
BioAuth/i18n_ts/: pt.ts  ru.ts
BioAuth/include/: bioauthwidget.h  biodevices.h  biodeviceswidget.h  biotypes.h
BioAuth/src/: bioauthwidget.ui  biodevices.cpp  biodeviceswidget.cpp  biodeviceswidget.ui  biotypes.cpp
BiometricAuth/: BiometricAuth.pri  BiometricAuth.pro  CMakeLists.txt  biometricauthwidget.cpp  biometricauthwidget.h  biometricdeviceinfo.cpp  biometricdeviceinfo.h  biometricdeviceswidget.cpp  biometricdeviceswidget.h  biometricproxy.cpp  biometricproxy.h  giodbus.cpp  giodbus.h  main.cpp
Common/: CMakeLists.txt  autoresize.cpp  autoresize.h  checkbutton.cpp  checkbutton.h  commonfunc.cpp  commonfunc.h
KylinNM/: CMakeLists.txt  kylin-nm.pri  kylin-nm.pro  nmqrc.qrc
KylinNM/src/: backthread.cpp  confform.cpp  confform.h  confform.ui  ksimplenm.cpp  kylin-dbus-interface.cpp  kylin-dbus-interface.h  kylin-network-interface.c  kylinnm.cpp  kylinnm.h  kylinnm.ui  loadingdiv.cpp  main.cpp  oneconnform.cpp  oneconnform.h  oneconnform.ui  onelancform.cpp  onelancform.h  onelancform.ui  swipegesturerecognizer.cpp  swipegesturerecognizer.h  switchbutton.cpp  switchbutton.h
KylinNM/wireless-security/: dlgconnhidwifi.cpp  dlgconnhidwifi.h  dlgconnhidwifileap.cpp  dlgconnhidwifileap.h  dlgconnhidwifisecfast.cpp  dlgconnhidwifisecfast.h  dlgconnhidwifisecleap.cpp  dlgconnhidwifisecleap.h  dlgconnhidwifisecpeap.cpp  dlgconnhidwifisecpwd.cpp  dlgconnhidwifisectls.cpp  dlgconnhidwifisectunneltls.cpp  dlgconnhidwifiwep.cpp  dlgconnhidwifiwpa.cpp  dlgconnhidwifiwpa.h  kylinheadfile.cpp  kylinheadfile.h
VirtualKeyboard/: VirtualKeyboard.pri  VirtualKeyboard.pro
assets/: authdialog.qss
backend/: ukui-screensaver-backend.pro
command/: command_main.cpp  ukui-screensaver-command.pro
data/: CMakeLists.txt  Makefile.am  kylin-screensaver-preferences.1  kylin-screensaver-preferences.desktop.in  kylin-screensaver.1  kylin-screensaver.directory.in  lock-dialog-default.css  lock-dialog-default.ui  mate-screensaver-command.1  mate-screensaver-preferences.1  mate-screensaver-preferences.desktop.in  mate-screensaver.pc.in  mate-screensavers.menu.in  org.kylin.ScreenSaver.service.in  org.kylin.screensaver.gschema.xml.in  org.ukui.screensaver.gschema.xml  org.ukui.screensaver.gschema.xml.in  screensaver-startup.sh  ukui-screensaver-preferences.desktop.in  ukui-screensaver-preferences.ui  ukui-screensaver-qt  ukui-screensaver.1  ukui-screensaver.desktop  ukui-screensaver.directory  ukui-screensaver.directory.in  ukui-screensavers.menu  xscreensaver-config.xsl
data/images/: Makefile.am
data/images/cosmos/: CREDITS  Makefile.am  background-1-kylin.xml.in  cosmos.xml.in.in
debian/: changelog  control  copyright  kylin-screensaver-common.install  mate-screensaver-common.install  rules  ukui-screensaver.install  ukui-screensaver.manpages  watch
doc/: Makefile.am  dbus-interface.xml  kylin-screensaver.xml.in
i18n_ts/: CMakeLists.txt  Makefile  bo.ts  es.ts  fr.ts  pt.ts  ru.ts  tr.ts  zh_CN.ts
man/: Makefile  ukui-screensaver-command.1  ukui-screensaver-dialog.1
po/: POTFILES.in  POTFILES.skip  am.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  es_AR.po  es_CO.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  ga.po  gl.po  gu.po  (+57 more)
screensaver/: CMakeLists.txt  chinesedate.cpp  chinesedate.h  cyclelabel.cpp  cyclelabel.h  default.qrc  main.cpp  mbackground.cpp  mbackground.h  scconfiguration.cpp  scconfiguration.h  screensaver-en.ini  screensaver.cpp  screensaver.h  screensaver.ini  sleeptime.cpp  sleeptime.h  ukui-screensaver-default.pro  weathermanager.cpp  weathermanager.h
screensaver-focus-helper/: CMakeLists.txt  main.cpp
screensaver/assets/: default-intel.qss  default.qss
screensaver/language/: screensaver-jd.ini  screensaver-ru_RU.ini  screensaver-zh_CN.ini
src/: .auth-pam.cpp.swp  CMakeLists.txt  Makefile.am  accountsinterface.cpp  accountsinterface.h  assets.qrc  auth-pam.cpp  auth-pam.h  auth.h  authdialog.cpp  authdialog.h  authdialog.ui  auxiliary.cpp  auxiliary.h  cn.kylinos.ScreenSaver.xml  common.h  configuration.cpp  configuration.h  copy-theme-dialog.c  debug-screensaver.sh  digitalauthdialog.cpp  digitalauthdialog.h  digitalkeyboard.cpp  digitalkeyboard.h  displaymanager.cpp  displaymanager.h  eduplatforminterface.cpp  eduplatforminterface.h  event_monitor.cpp  event_monitor.h  fullbackgroundwidget.cpp  fullbackgroundwidget.h  generalauthwidget.cpp  generalauthwidget.h  gestureauthdialog.cpp  gestureauthdialog.h  grab-x11.cpp  grab-x11.h  gs-auth-bsdauth.c  gs-auth-helper.c  (+96 more)
src/BioAuth/: CMakeLists.txt  bio-assets.qrc  bioauth.pri
src/BioAuth/i18n_ts/: es.ts  fr.ts  zh_CN.ts
src/BioAuth/include/: bioauth.h  biodevices.h  biodeviceswidget.h  biometric.h
src/BioAuth/src/: bioauth.cpp  bioauthwidget.cpp  biodevices.cpp  biodeviceswidget.cpp  biodeviceswidget.ui
src/BioAuth/tests/: test_biodeviceswidget.cpp
src/PhysicalDeviceSet/: brightnessdeviceset.cpp  brightnessdeviceset.h  flightmodeset.cpp  flightmodeset.h  physical-device-set.pri  sounddeviceset.cpp  sounddeviceset.h  touchscreenset.cpp  touchscreenset.h
src/assets/: authdialog.qss
src/assets/weather/: icon.htm
src/bioAuthentication/: CMakeLists.txt  bioAuthentication.pri  bioauthentication.cpp  bioauthentication.h  biocustomtype.cpp  biocustomtype.h  biodevices.cpp  biodevices.h  biodeviceview.cpp  biodeviceview.h  bioverify.qrc
(+46 files in other folders)
